Añadido Boostrap a la plantilla Revista y separado las funciones JavaScript del cliente en un archivo aparte

--- a/public/stylesheets/estilos.css
+++ b/public/stylesheets/estilos.css
@@ -2,7 +2,7 @@
     background-color: rgb(255, 250, 210);
     color: black;
 }
-
+/* QUEDO SIN USAR AL INSTALAR BOOSTRAP
 .fondoClaro table{
     background-color: azure;
 }
@@ -10,17 +10,17 @@
 .fondoClaro table thead{
     background-color: rgb(255, 250, 190);
 }
-
+*/
 
 .fondoOscuro{
     background-color: rgb(20, 20, 20);
     color: white;
 }
-
+/* QUEDO SIN USAR AL INSTALAR BOOSTRAP
 .fondoOscuro table{
     background-color: rgb(100, 100, 100);
 }
 
 .fondoOscuro table thead{
     background-color: rgb(70, 70, 70);
-}
+}*/
